--- a/doku/static/doku/style.css
+++ b/doku/static/doku/style.css
@@ -549,13 +549,36 @@ button p {
 }
 
 .message-time {
+    float: left;
     margin: 0;
-    width: 10%;
+    width: 85px;
     padding: 0;
+    padding-left: 5px;
+    border: 1px solid var(--highlight-color);
+    border-radius: 10px;
 }
 
 .message-text {
     margin: 0;
-    width: 90%;
-    padding: 0;
+    margin-left: 85px;
+    padding: 5px;
+    padding-top: 0;
+    height: auto;
+}
+
+.eingerueckt20 {
+    margin-left: 20px;
+    padding-bottom: 5px;
+}
+.eingerueckt40 {
+    margin-left: 40px;
+    padding-bottom: 5px;
+}
+.eingerueckt60 {
+    margin-left: 60px;
+    padding-bottom: 5px;
+}
+.eingerueckt80 {
+    margin-left: 80px;
+    padding-bottom: 5px;
 }
