--- a/doku/templates/doku/base_generic.html
+++ b/doku/templates/doku/base_generic.html
@@ -79,11 +79,11 @@
 	</div>
 	<!-- Custom scripts -->
     <script type="text/javascript" src="{% static 'doku/scripts.js' %}"></script>
-    <!-- React basics
+    <!-- React basics-->
     <script type="text/javascript" src="{% static 'doku/react.production.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'doku/react-dom.production.min.js' %}"></script>-->
-    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script type="text/javascript" src="{% static 'doku/react-dom.production.min.js' %}"></script>
+    <!--<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>-->
     <!-- React components -->
     <script type="module" src="{% static 'doku/component-einsatz.js' %}"></script>
 	{% if autor and not autor.profile.nightmode %}
