removed original lagekarte using lagekarte.info now

--- a/doku/templates/doku/rechts.html
+++ b/doku/templates/doku/rechts.html
@@ -6,7 +6,7 @@
         <div class="spacer"></div>
         <div class="Toolbox">
             {% if einstellungen.Lagekarten %}
-                <a target="_blank" href="{% url 'doku:lagekarte' einsatz.Nummer %}">
+                <a target="_blank" href="https://www.lagekarte.info/de/?center=52.491505,10.730803">
                     <button>Lagekarten</button>
                 </a>
             {% endif %}
